modal overflow fix

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -3,25 +3,25 @@
     padding: 0;
     border-radius: 5px;
     border: none;
-    width: 100vw;
+    width: 70vw;
     background-color: transparent;
 }
 
 @media screen and (max-width: 768px) {
     #contact_modal {
-        width: 100vw;
+        width: 50vw;
     }
 }
 
 @media screen and (min-width: 768px) {
     #contact_modal {
-        width: 70vw;
+        width: 50vw;
     }
 }
 
 @media screen and (min-width: 1300px) {
     #contact_modal {
-        width: 60vw;
+        width: 40vw;
     }
 }
 
@@ -69,19 +69,17 @@
 
 .modal {
     border-radius: 5px;
-    background-color: #DB8876;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
+    background-color: #DB8876 !important;
+    width: 90%;
     align-items: center;
     justify-content: space-between;
-    padding: 32px;
+    padding: 32px !important;
     margin: auto;
 }
 
 @media screen and (max-width: 768px) {
     .modal {
-        width: 100%;
+        width: 90%;
     }
 }
 
